------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.4.2?
===========================

Release date: 2019-09-30


* ``ignored-modules`` can skip submodules. Close #3135

* ``self-assigning-variable`` skips class level assignments.

   Close #2930

* ``consider-using-sys-exit`` is exempted when `exit()` is imported from `sys`

   Close #3145

* Exempt annotated assignments without variable from ``class-variable-slots-conflict``

  Close #3141

* Fix ``utils.is_error`` to account for functions returning early.

  This fixes a false negative with ``unused-variable`` which was no longer triggered
  when a function raised an exception as the last instruction, but the body of the function
  still had unused variables.

  Close #3028


What's New in Pylint 2.4.1?
===========================

Release date: 2019-09-25


* Exempt type checking definitions defined in both clauses of a type checking guard

  Close #3127


* Exempt type checking definitions inside the type check guard

  In a7f236528bb3758886b97285a56f3f9ce5b13a99 we added basic support
  for emitting `used-before-assignment` if a variable was only defined
  inside a type checking guard (using `TYPE_CHECKING` variable from `typing`)
  Unfortunately that missed the case of using those type checking imports
  inside the guard itself, which triggered spurious used-before-assignment errors.

  Close #3119

* Require astroid >= 2.3 to avoid any compatibility issues.


What's New in Pylint 2.4.0?
===========================

Release date: 2019-09-24

* New check: ``import-outside-toplevel``

  This check warns when modules are imported from places other than a
  module toplevel, e.g. inside a function or a class.

* Handle inference ambiguity for ``invalid-format-index``

  Close #2752

* Removed Python 2 specific checks such as ``relative-import``,
  ``invalid-encoded-data``, ``missing-super-argument``.

* Support forward references for ``function-redefined`` check.

  Close #2540
