@@ -46,6 +46,8 @@ import sys
 import time
 from typing import Any, Dict, Tuple
 
+import toml
+
 from pylint import utils
 
 USER_HOME = os.path.expanduser("~")
@@ -87,38 +89,70 @@ def save_results(results, base):
         print("Unable to create file %s: %s" % (data_file, ex), file=sys.stderr)
 
 
-def find_pylintrc():
-    """search the pylint rc file and return its path if it find it, else None
-    """
-    # is there a pylint rc file in the current directory ?
-    if os.path.exists("pylintrc"):
-        return os.path.abspath("pylintrc")
-    if os.path.exists(".pylintrc"):
-        return os.path.abspath(".pylintrc")
+def _toml_has_config(path):
+    with open(path, "r") as toml_handle:
+        content = toml.load(toml_handle)
+        try:
+            content["tool"]["pylint"]
+        except KeyError:
+            return False
+
+    return True
+
+
+def _cfg_has_config(path):
+    parser = configparser.ConfigParser()
+    parser.read(path)
+    return any(section.startswith("pylint.") for section in parser.sections())
+
+
+def find_default_config_files():
+    """Find all possible config files."""
+    rc_names = ("pylintrc", ".pylintrc")
+    config_names = rc_names + ("pyproject.toml", "setup.cfg")
+    for config_name in config_names:
+        if os.path.isfile(config_name):
+            if config_name.endswith(".toml") and not _toml_has_config(config_name):
+                continue
+            if config_name.endswith(".cfg") and not _cfg_has_config(config_name):
+                continue
+
+            yield os.path.abspath(config_name)
+
     if os.path.isfile("__init__.py"):
         curdir = os.path.abspath(os.getcwd())
         while os.path.isfile(os.path.join(curdir, "__init__.py")):
             curdir = os.path.abspath(os.path.join(curdir, ".."))
-            if os.path.isfile(os.path.join(curdir, "pylintrc")):
-                return os.path.join(curdir, "pylintrc")
-            if os.path.isfile(os.path.join(curdir, ".pylintrc")):
-                return os.path.join(curdir, ".pylintrc")
+            for rc_name in rc_names:
+                rc_path = os.path.join(curdir, rc_name)
+                if os.path.isfile(rc_path):
+                    yield rc_path
+
     if "PYLINTRC" in os.environ and os.path.exists(os.environ["PYLINTRC"]):
-        pylintrc = os.environ["PYLINTRC"]
+        if os.path.isfile(os.environ["PYLINTRC"]):
+            yield os.environ["PYLINTRC"]
     else:
         user_home = os.path.expanduser("~")
-        if user_home in ("~", "/root"):
-            pylintrc = ".pylintrc"
-        else:
-            pylintrc = os.path.join(user_home, ".pylintrc")
-            if not os.path.isfile(pylintrc):
-                pylintrc = os.path.join(user_home, ".config", "pylintrc")
-    if not os.path.isfile(pylintrc):
-        if os.path.isfile("/etc/pylintrc"):
-            pylintrc = "/etc/pylintrc"
-        else:
-            pylintrc = None
-    return pylintrc
+        if user_home not in ("~", "/root"):
+            home_rc = os.path.join(user_home, ".pylintrc")
+            if os.path.isfile(home_rc):
+                yield home_rc
+            home_rc = os.path.join(user_home, ".config", "pylintrc")
+            if os.path.isfile(home_rc):
+                yield home_rc
+
+    if os.path.isfile("/etc/pylintrc"):
+        yield "/etc/pylintrc"
+
+
+def find_pylintrc():
+    """search the pylint rc file and return its path if it find it, else None
+    """
+    for config_file in find_default_config_files():
+        if config_file.endswith("pylintrc"):
+            return config_file
+
+    return None
 
 
 PYLINTRC = find_pylintrc()
@@ -707,14 +741,28 @@ class OptionsManagerMixIn:
         if use_config_file:
             parser = self.cfgfile_parser
 
-            # Use this encoding in order to strip the BOM marker, if any.
-            with io.open(config_file, "r", encoding="utf_8_sig") as fp:
-                parser.read_file(fp)
+            if config_file.endswith(".toml"):
+                with open(config_file, "r") as fp:
+                    content = toml.load(fp)
 
-            # normalize sections'title
-            for sect, values in list(parser._sections.items()):
-                if not sect.isupper() and values:
-                    parser._sections[sect.upper()] = values
+                try:
+                    sections_values = content["tool"]["pylint"]
+                except KeyError:
+                    pass
+                else:
+                    for section, values in sections_values.items():
+                        parser._sections[section.upper()] = values
+            else:
+                # Use this encoding in order to strip the BOM marker, if any.
+                with io.open(config_file, "r", encoding="utf_8_sig") as fp:
+                    parser.read_file(fp)
+
+                # normalize sections'title
+                for sect, values in list(parser._sections.items()):
+                    if sect.startswith("pylint."):
+                        sect = sect[len("pylint."):]
+                    if not sect.isupper() and values:
+                        parser._sections[sect.upper()] = values
 
         if not verbose:
             return
